--- a/src/main/webapp/searchMVC.zul
+++ b/src/main/webapp/searchMVC.zul
@@ -1,7 +1,7 @@
 <?link rel="stylesheet" type="text/css" href="/css/style.css"?>
-<zk
- apply="fr.meg.zkProject.controller.SearchController">
-    <div sclass="container">
+<zk> 
+   <div sclass="container" apply="fr.meg.zkProject.controller.SearchController">
+    
     <hbox align="center" style="margin-bottom:5px;" >
 		Keyword:
 		<textbox id="keywordBox" />
@@ -21,7 +21,7 @@
 			</listitem>
 		</template>
 	</listbox>
-	<hlayout style="margin-top:20px" width="100%">
+	<hlayout style="margin-top:20px">
 		<image id="previewImage" width="250px" />
 		<vlayout hflex="1">
 			<label id="modelLabel" />
@@ -30,5 +30,5 @@
 			<label id="descriptionLabel" />
 		</vlayout>
 	</hlayout>
-	</div>
+   </div>
 </zk>
